# midi2-send-app

./: .gitmodules  CMakeLists.txt  LICENSE
resource/: Info.plist  Window.uidesc
source/: app.cpp
